--- a/CMPE312_PROJECT_TICKETSYSTEM.csproj
+++ b/CMPE312_PROJECT_TICKETSYSTEM.csproj
@@ -76,6 +76,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="MovieDetailPage.xaml.cs">
+      <DependentUpon>MovieDetailPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="MoviesPage.xaml.cs">
+      <DependentUpon>MoviesPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="TicketSystemDBDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -93,6 +99,14 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="MovieDetailPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="MoviesPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -134,6 +148,21 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="cineflash.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Prestige.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Uncut.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="FightClub.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Seven.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Mulholland.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
