--- a/CMPE312_PROJECT_TICKETSYSTEM.csproj
+++ b/CMPE312_PROJECT_TICKETSYSTEM.csproj
@@ -85,6 +85,10 @@
     <Compile Include="MoviesPage.xaml.cs">
       <DependentUpon>MoviesPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MyTicketsPage.xaml.cs">
+      <DependentUpon>MyTicketsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Tickets.cs" />
     <Compile Include="TicketSystemDBDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -111,6 +115,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="MoviesPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="MyTicketsPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
